--- a/src/components/Searchbar/styles.module.scss
+++ b/src/components/Searchbar/styles.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   width: 100%;
+  max-height: 3.5rem;
   max-width: 12.25rem;
   position: relative;
   transition: 0.2s ease-in-out;
