--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,6 +5,24 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  scrollbar-width: thin;
+  scrollbar-color: colors.$secondary colors.$neutral;
+}
+
+// Scrollbar
+*::-webkit-scrollbar-track {
+  background-color: colors.$neutral;
+}
+
+*::-webkit-scrollbar {
+  width: 0.625rem;
+  background: colors.$neutral;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 0.625rem;
+  background: colors.$secondary;
 }
 
 :root {
@@ -23,7 +41,7 @@ html {
 }
 
 body {
-  background: colors.$primary;
+  background: colors.$neutral;
   color: var(--white);
 }
 
@@ -42,4 +60,25 @@ button {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.container {
+  width: 100%;
+  max-width: calc(73.1875rem + 20px);
+  padding: 20px 20px;
+  margin: 0 auto;
+}
+
+.sr-only {
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
+  -webkit-clip-path: inset(50%) !important;
+  clip-path: inset(50%) !important; /* 2 */
+  height: 1px !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important; /* 3 */
 }
