--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -124,6 +124,7 @@
 .contact {
   padding-top: 2.5rem;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   flex-wrap: wrap;
 
