feat: create desktop header navbar

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -4,6 +4,8 @@
   width: 100%;
   background-color: colors.$neutral;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
