--- a/src/components/Banners/CategoriesBanners/CategoryBanner/styles.module.scss
+++ b/src/components/Banners/CategoriesBanners/CategoryBanner/styles.module.scss
@@ -17,7 +17,7 @@
     background-color: rgba($color: colors.$overlay, $alpha: 0.5);
     transition: 0.2s ease-in-out;
 
-    font-size: 22px;
+    font-size: 1.375rem;
     font-weight: 400;
     // letter-spacing: 2px;
     text-transform: uppercase;
@@ -29,7 +29,7 @@
     bottom: 0;
 
     &:hover {
-      font-size: 24px;
+      font-size: 1.5rem;
       background-color: rgba($color: colors.$overlay, $alpha: 0.7);
     }
   }
