feat: product cards and products showcases

--- a/src/components/Banners/CategoriesBanners/styles.module.scss
+++ b/src/components/Banners/CategoriesBanners/styles.module.scss
@@ -1,8 +1,8 @@
-@use '@/styles/_colors';
+@use '@/styles/_libary';
 
 .section {
   width: 100%;
-  background-color: colors.$secondary;
+  background-color: libary.$secondary;
 
   .wrapper {
     display: flex;
