--- a/src/styles/_libary.scss
+++ b/src/styles/_libary.scss
@@ -1,3 +1,3 @@
-@use '__colors.scss';
-@use '__typograph.scss';
-@use '__mixins.scss';
+@import '_colors.scss';
+@import '_typograph.scss';
+@import '_mixins.scss';
