--- a/src/components/Banners/MiddleBanners/BannerCard/styles.module.scss
+++ b/src/components/Banners/MiddleBanners/BannerCard/styles.module.scss
@@ -3,7 +3,7 @@
 .container {
   width: 100%;
   height: 100%;
-  max-width: 570px;
+  max-width: 560px;
   max-height: 280px;
   overflow: hidden;
   position: relative;
@@ -41,6 +41,11 @@
         right: 0;
       }
 
+      @media screen and (max-width: 768px) {
+        font-size: 0.875rem;
+        padding: 0.3125rem 0.625rem;
+      }
+
       @keyframes jumping {
         0% {
           transform: translateY(0px);
@@ -66,5 +71,16 @@
   .bannerImg {
     object-fit: cover;
     object-position: center;
+  }
+
+  @media screen and (max-width: 768px) {
+    max-height: 200px;
+
+    .bannerImg {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
   }
 }
