--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -42,6 +42,7 @@
     position: absolute;
     right: 0;
     top: calc(100% + 0px);
+    z-index: 99;
     padding: 0.9375rem 2.8125rem;
     border: 2px solid colors.$contrast;
 
