--- a/src/components/ProductShowcase/styles.module.scss
+++ b/src/components/ProductShowcase/styles.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 1.875rem;
 
     .title {
       color: colors.$contrast2;
@@ -18,8 +18,21 @@
     .productWrapper {
       display: flex;
       flex-wrap: wrap;
-      row-gap: 60px;
-      column-gap: 10px;
+      justify-content: center;
+      row-gap: 3.75rem;
+      column-gap: 0.625rem;
+    }
+
+    @media screen and (max-width: 768px) {
+      gap: 1.25rem;
+
+      .title {
+        font-size: 1.25rem;
+      }
+
+      .productWrapper {
+        row-gap: 1.25rem;
+      }
     }
   }
 }
