--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,9 +1,16 @@
 @use '@/styles/_colors';
 
+.headerWrapper {
+  width: fit-content;
+  height: fit-content;
+}
+
 .header {
   width: 100%;
   background-color: colors.$neutral;
-  position: relative;
+  position: sticky;
+  top: 0;
+  z-index: 99;
   display: flex;
   flex-direction: column;
 }
