--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -17,15 +17,20 @@
 
 .container {
   width: 100%;
-  max-width: calc(73.1875rem + 20px);
-  padding: 20px 20px;
+  max-width: calc(73.1875rem + 1.25rem);
+  padding: 1.25rem 1.25rem;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media screen and (max-width: 768px) {
+    padding: 0.5rem 1.25rem;
+  }
 }
 
 .controls {
   display: flex;
+  align-items: center;
   gap: 5px;
 }
